--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "graphql-subscriptions": "1.0.0",
     "graphql-tag": "2.9.2",
     "graphql-tools": "4.0.0",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "node-fetch": "2.2.0",
     "react": "16.5.2",
     "react-apollo": "2.1.11",
@@ -70,7 +70,7 @@
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-standard": "4.0.0",
-    "json-server": "0.14.0",
+    "json-server": "^0.16.0",
     "node-sass-chokidar": "1.3.3",
     "nodemon": "1.18.4",
     "npm-run-all": "4.1.3",
